# rust-docs

./: Cargo.toml  calculation.js  readme.md
migrations/: 20260215110955_create_post_table.sql
src/: looping.rs  main.rs  rest_api.rs
src/basic/: array.rs  knowledge.rs  looping.rs  mod.rs
src/config/: db.rs
src/encryption/: encryption.rs  hashing.rs  mod.rs
src/modules/posts/: handler.rs  mod.rs  post.rs  repository.rs
src/port_scanner/: ports.rs
src/resp/: types.rs
src/routes/: api.rs
