[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono", "tls-native-tls"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
axum = "0.8.8"
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
chrono = { version = "0.4.43", features = ["serde"] }
chrono-tz = "0.10.4"
aead = "0.6.0-rc.10"
aes-gcm = "0.10.3"
sha2 = "0.10.9"
hex = "0.4.3"
